fix: fix z-index for nav background

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -361,7 +361,8 @@ code {
     height: 100%;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.699); }
+    background: rgba(0, 0, 0, 0.699);
+    z-index: 2; }
 
   .photo-and-name {
     flex-direction: column;
