--- a/styles/scss/style-mobile-768.scss
+++ b/styles/scss/style-mobile-768.scss
@@ -13,6 +13,7 @@
   
     background: rgba(0, 0, 0, 0.699);
   
+    z-index: 2;
   }
 
   // #nav-block.hidden{
